# libhex9

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  LLM.md  README.md  h9_grid  hex9_c.cpp  hex9_c.h
build-l30/: CMakeCache.txt  CTestTestfile.cmake  Makefile  adaptive  batch  bin_prefix_guard  cellgeom  cmake_install.cmake  full_id  gc_kring  grid  kring  labels  libhex9.0.dylib  libhex9.dylib  smoke
build-l30/Testing/Temporary/: CTestCostData.txt
core/: WGS84_l5_warp.mirrored.f64.h9warp  h9_addressing.h  h9_cell_geom.h  h9_grid.h  h9_kring.h  h9_layout.h  h9_math.h  h9_warp.h  h9_warp_embedded.cpp  h9_warp_embedded.h  h9_warp_io.h  h9_warp_runtime.cpp  h9_warp_runtime.h
extension/postgis_hex9/: Makefile  README.md  hex9.sql.in  lwgeom_hex9.cpp  postgis_hex9--1.1.0--1.2.0.sql  postgis_hex9--1.2.0--1.3.0.sql  postgis_hex9--1.3.0--1.4.0.sql  postgis_hex9--1.4.0.sql  postgis_hex9.control
extension/postgis_hex9/expected/: hex9.out
extension/postgis_hex9/sql/: hex9.sql
geoplegma/: Cargo.toml  build.rs
geoplegma/src/: lib.rs
python/: hex9_ext.cpp
test/: adaptive.c  batch.c  bin_prefix_guard.c  canonical_invariants.py  cellgeom.c  depth_check.py  full_id.c  gc_kring.c  golden_l29.py  grid.c  kring.c  l30_invariants.py  labels.c  smoke.c  smoke.py
thought/: paper.md
thought/paper_figures/: thimpu_chloropleth.pgw
tools/: corner_trace.cpp  dggs_survey_hex9.py  encoder_ab_probe.cpp  h9_choropleth.py  h9_csv.py  kring_probe.cpp  newton_invert_aj.h  seam_profile.cpp  seam_transect.c  viz_flavour.c  viz_flavour.py
tools/diagnosis/: apex_scan.cpp  fossil_probe.py  full_uuid_probe.cpp  mode1_probe.cpp  newton_aj_probe.cpp  newton_hotzones.cpp  newton_invert.h  newton_probe.cpp  polar_probe.c
tools/support/: README.md  export_ct_grads.py  export_ct_mesh.py  export_uv_lattice.py  export_warp_deltas.py  export_warp_grads.py  export_warp_test_vecs.py  export_warp_v3.py  gen_h9_lattice_consts.py  h9warp_io.py  warp-port-brief-f6-cside.md  warp_tidy.py
